--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700");
+
 * {
   margin: 0;
   padding: 0;
@@ -7,8 +9,6 @@
 
 html,
 body {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
   padding: 3em 0;
   height: 100%;
   min-height: 100%;
